--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.16.0"
   }
 }
