--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,15 @@
 {
     "compilerOptions": {
-        "outFile": "dist/app.js",
-        "sourceMap": true
+        "target": "es6",
+        "noImplicitAny": false,
+        "sourceMap": true,
+        "jsx": "preserve",
+        "experimentalDecorators": true,
+        "moduleResolution": "node"
     },
-    "files": [
-        "src/app.ts"
+    "lib": ["DOM", "es6"],
+    "exclude": [
+        "node_modules",
+        ".meteor"
     ]
 }
